# FermionCommute/CMakeLists.txt

cmake_minimum_required(VERSION 3.30)

project(FermionCommute VERSION 1.0)

# Set local user-specific settings
# By default, this adds ~/usr/local/ and ../../.mrock/ to the cmake and include paths
# If additional configurations/includes are needed, provide them in cmake/user_settings.cmake
# Extra include dirs are stored in the cmake variable EXTRA_INCLUDE_DIRS
include(cmake/include_settings.cmake)

# Build type settings; defaults to Release
set(default_build_type "Release")
if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
  set(CMAKE_BUILD_TYPE "${default_build_type}" CACHE
      STRING "Choose the type of build." FORCE)
  # Set the possible values of build type for cmake-gui
  set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS
    "Debug" "Release" "MinSizeRel" "RelWithDebInfo")
endif()
message(STATUS "Build type is '${CMAKE_BUILD_TYPE}'.")

#
# Library specifics
#
include(cmake/fermion_commute_options.cmake)
find_package(Boost REQUIRED COMPONENTS serialization)


add_subdirectory(sources/Definitions)
add_executable(FermionCommute 
    sources/FermionCommute.cpp
)

target_link_libraries(FermionCommute
    PRIVATE
        FermionCommute_options
        Definitions
        Boost::serialization
)